// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should complain about field being required. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class=""
        novalidate=""
      >
        <div
          class="mb-3 form-floating col"
        >
          <input
            class="form-control is-invalid"
            feedback="Required"
            id="title"
            name="title"
            placeholder="Title..."
            type="text"
            value=""
          />
          <div
            class="invalid-tooltip"
          >
            Required
          </div>
          <label
            for="title"
          >
            Title
          </label>
        </div>
        <div
          class="mb-3 form-floating col"
        >
          <input
            class="form-control"
            id="description"
            name="description"
            placeholder="Description..."
            type="text"
            value=""
          />
          <div
            class="invalid-tooltip"
          />
          <label
            for="description"
          >
            Description
          </label>
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Save
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class=""
      novalidate=""
    >
      <div
        class="mb-3 form-floating col"
      >
        <input
          class="form-control is-invalid"
          feedback="Required"
          id="title"
          name="title"
          placeholder="Title..."
          type="text"
          value=""
        />
        <div
          class="invalid-tooltip"
        >
          Required
        </div>
        <label
          for="title"
        >
          Title
        </label>
      </div>
      <div
        class="mb-3 form-floating col"
      >
        <input
          class="form-control"
          id="description"
          name="description"
          placeholder="Description..."
          type="text"
          value=""
        />
        <div
          class="invalid-tooltip"
        />
        <label
          for="description"
        >
          Description
        </label>
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render a form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class=""
        novalidate=""
      >
        <div
          class="mb-3 form-floating col"
        >
          <input
            class="form-control"
            id="title"
            name="title"
            placeholder="Title..."
            type="text"
            value=""
          />
          <div
            class="invalid-tooltip"
          />
          <label
            for="title"
          >
            Title
          </label>
        </div>
        <div
          class="mb-3 form-floating col"
        >
          <input
            class="form-control"
            id="description"
            name="description"
            placeholder="Description..."
            type="text"
            value=""
          />
          <div
            class="invalid-tooltip"
          />
          <label
            for="description"
          >
            Description
          </label>
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Save
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class=""
      novalidate=""
    >
      <div
        class="mb-3 form-floating col"
      >
        <input
          class="form-control"
          id="title"
          name="title"
          placeholder="Title..."
          type="text"
          value=""
        />
        <div
          class="invalid-tooltip"
        />
        <label
          for="title"
        >
          Title
        </label>
      </div>
      <div
        class="mb-3 form-floating col"
      >
        <input
          class="form-control"
          id="description"
          name="description"
          placeholder="Description..."
          type="text"
          value=""
        />
        <div
          class="invalid-tooltip"
        />
        <label
          for="description"
        >
          Description
        </label>
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
